--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body{
     font-family: "Ubuntu";
     color: #000;
     animation: rotate 6s infinite alternate linear;
-    background-color: #f1f1f1;
+    background-color: white;
 }
 
 .login-card{
